# RucixKernel

./: CMakeLists.txt  README.md  boot.asm  long_mode_init.asm
boot/: kernel_entry.asm
kernel/: console.c  module.c
kernel/arch/x86_64/: gdt.c  interrupts.asm  switch.asm  usermode.asm  vmx_handler.asm
kernel/drivers/: pic.c  pit.c
kernel/drivers/bus/: pci.c
kernel/drivers/core/: driver.c
kernel/drivers/gpu/bga/: bga.c
kernel/drivers/input/: mouse.c
kernel/drivers/sound/: ac97.c
kernel/drivers/usb/: xhci.c
kernel/fs/: fat32.c  filemap.c  ramfs.c  vfs.c
kernel/include/: bitops.h  chardev.h  console.h  gdt.h  hrtimer.h  multiboot.h  pipe.h  pmm.h  rtmutex.h  syscall.h  types.h  vmm.h
kernel/include/drivers/: blockdev.h  dma.h  e1000.h  input.h  nvme.h  pic.h  ramdisk.h
kernel/include/drivers/usb/: xhci.h
kernel/include/drm/: drm.h
kernel/include/fs/: buffer.h  jbd.h
kernel/include/mm/: page_cache.h  swap.h
kernel/include/net/: icmp.h  ip.h  net_namespace.h  netdevice.h  socket.h
kernel/include/sound/: core.h
kernel/ipc/: msg.c  pipe.c  shm.c  signal.c
kernel/lib/: radix-tree.c  string.c
kernel/memory/: pmm.c  swap.c
kernel/mm/: page_cache.c
kernel/net/core/: dev.c  net_namespace.c  skbuff.c
kernel/net/drivers/: loopback.c
kernel/net/ethernet/: eth.c
kernel/net/ipv4/: ip.c  udp.c
kernel/net/wireless/: core.c
kernel/process/: process.c  sched_fair.c  sched_mlfq.c
kernel/security/: seccomp.c
kernel/time/: hrtimer.c
